tests/invalid/simple/Subtype_CompileFail_4.whiley
define {int} where |$| > 0 as scf4set

void System::main([string] args):
    scf4set x = {}
    
